--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
